--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <![endif]-->
   </head>
   <body>
-	<iframe src="https://www.baidu.com"></iframe>
+	<iframe src="https://www.baidu.com" width="100%" height="100%"></iframe>
   </body>
 </html>
