--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="display:block;position:absolute;left:0px;top:0px;width:100%;height:100%;overflow:hidden">
 	<iframe src="https://www.baidu.com" width="100%" height="100%"></iframe>
   </body>
 </html>
